--- a/locales/ja/LC_MESSAGES/packages.po
+++ b/locales/ja/LC_MESSAGES/packages.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-05-05 00:14+0000\n"
+"POT-Creation-Date: 2025-05-06 00:14+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -6147,13 +6147,13 @@ msgstr ""
 
 #: ../../scientific-python-lectures/packages/statistics/index.rst:653
 msgid "Multiple Regression: including multiple factors"
-msgstr ""
+msgstr "重回帰: 複数の要因を含む"
 
 #: ../../scientific-python-lectures/packages/statistics/index.rst:662
 msgid ""
 "Consider a linear model explaining a variable `z` (the dependent variable) "
 "with 2 variables `x` and `y`:"
-msgstr ""
+msgstr "変数 `z`  (従属変数) を2つの変数 `x` と `y` で説明する線形モデルを考えます:"
 
 #: ../../scientific-python-lectures/packages/statistics/index.rst:665
 msgid ":math:`z = x \\, c_1 + y \\, c_2 + i + e`"
@@ -6163,7 +6163,7 @@ msgstr ""
 msgid ""
 "Such a model can be seen in 3D as fitting a plane to a cloud of (`x`, `y`, "
 "`z`) points."
-msgstr ""
+msgstr "このようなモデルは、 (`x`, `y`, `z`) 点の雲に平面を当てはめるように3Dで見ることができます。"
 
 #: ../../scientific-python-lectures/packages/statistics/index.rst:673
 msgid "**Example: the iris data** (:download:`examples/iris.csv`)"
@@ -6177,7 +6177,7 @@ msgstr ""
 
 #: ../../scientific-python-lectures/packages/statistics/index.rst:721
 msgid "Post-hoc hypothesis testing: analysis of variance (ANOVA)"
-msgstr ""
+msgstr "事後仮説検定: 分散分析 (ANOVA)"
 
 #: ../../scientific-python-lectures/packages/statistics/index.rst:723
 msgid ""
@@ -6191,6 +6191,11 @@ msgid ""
 "``\"name[T.versicolor] - name[T.virginica]\"``, with an `F-test "
 "<https://en.wikipedia.org/wiki/F-test>`_::"
 msgstr ""
+"上記のアヤメの例では、萼片の幅の影響を取り除いた上で、花弁の長さがversicolorとvirginicaで異なるかどうかを検証したいです。これは、上記で推定された線形モデルにおいて、versicolorとvirginicaに関連する係数の差を検定することとして定式化することができます。"
+" (これは分散分析です、 `ANOVA <https://en.wikipedia.org/wiki/Analysis_of_variance>`_)。"
+" このために、推定されたパラメーターに **'コントラスト'のベクトル** を書きます: ``\"name[T.versicolor] - "
+"name[T.virginica]\"`` を `F-test <https://en.wikipedia.org/wiki/F-test>`_ "
+"でテストしたいです::"
 
 #: ../../scientific-python-lectures/packages/statistics/index.rst:736
 msgid "Is this difference significant?"
